--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
         <p>The website needed for all your local clinic visits</p>
     </section>
     <section class="container-fluid">
-        <div class="row justify-content-center align-items-center justify-self-center">
+        <div class="row justify-content-center align-items-center">
             <div class="col-6">
                 <h1 class="display-4">For Patients</h1>
-                <p>lorem100</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, dolores facere fuga ab possimus, aperiam a ad officiis quo nisi delectus repellendus voluptate? Quae dolores similique, minima incidunt magnam hic accusamus nulla inventore deleniti commodi autem debitis nobis nostrum nihil ad laudantium mollitia ratione, molestiae placeat eius qui ullam in!</p>
             </div>
-            <div class="col-6 justify-self-center">
-                <img src="images/patient.jpg" alt="" class="img-fluid">
+            <div class="col-6">
+                <img id="patient" src="images/patient.jpg" alt="" class="mx-auto d-block img-fluid">
             </div>
         </div>
-        <div class="row justify-content-center align-items-center">
+        <div class="row justify-content-center align-items-center mb-3">
             <div class="col-6 order-2">
                 <h1 class="display-4">For Doctors</h1>
                 <p>
-                    
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod odit distinctio ut hic, quia architecto inventore quibusdam totam nisi nihil eveniet nulla nobis aspernatur facilis. Eum repudiandae magni fuga doloribus unde iste numquam quia est maiores repellat, officiis sapiente eaque voluptate quis cumque modi molestias, quibusdam asperiores impedit atque magnam!
                 </p>
             </div>
             <div class="col-6 order-1">
-                <img src="images/bill-oxford-8u_2imJaVQs-unsplash.jpg" alt="" class="img-fluid">
+                <img id="doctor" src="images/bill-oxford-8u_2imJaVQs-unsplash.jpg" alt="" class="img-fluid mx-auto d-block">
             </div>
         </div>
     </section>
