--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>PreScripted | An App which tracks your Prescriptions</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-danger fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">PreScripted</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -28,10 +28,10 @@
             </ul>
             <ul class= navbar-nav ml-auto>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="#">Login as Patient</a>
                 </li>
                 <li class="nav-item m-auto">
-                    <a class="nav-link" href="#">Sign Up</a>
+                    <a class="nav-link" href="#">Login as Doctor</a>
                 </li>
                 
             </ul>
@@ -77,10 +77,13 @@
         </div>
         <hr>
     </section>
-    <footer class="container-fluid bg-dark">
+    <footer class="container-fluid">
         <div class="row justify-content-center">
             <p><a target="_blank" href="https://github.com/HashTalmiz"><i class="mt-3 fab fa-github-square"></i></a>
             </p>
+        </div>
+        <div class="row justify-content-center">
+            <em>This Web App was made for the CODE-RIT MiniHack competition by Talmiz</em> 
         </div>
 
     </footer>
