fixed resposivity for xs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login as Patient</a>
                 </li>
-                <li class="nav-item m-auto">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Login as Doctor</a>
                 </li>
                 
@@ -40,14 +40,15 @@
             </div>
         </div>
     </nav>
+    <div class="container-fluid px-0">
     <section class="jumbotron text-center mt-4">
         <h1 class="display-2">PreScripted</h1>
         <h1 class="display-5">The best of your records</h1>
         <p>The website needed for all your local clinic visits</p>
     </section>
-    
+    </div>
     <section class="container-fluid">
-        <div class="row justify-content-center align-items-center">
+        <div class="row justify-content-center align-items-start align-items-md-center pb-4">
             <div class="col-6 pl-5"><i class="fas d-none d-md-inline fa-prescription"></i>
                 <h1 class="display-4">For Patients</h1>
                 <p>You can keep a track of your prescriptions from various visits to your local clinic, and maintain a proper medical history of your intake of medicines. 
@@ -65,7 +66,7 @@
                 <img id="patient" src="images/patient.jpg" alt="" class="mx-auto d-block img-fluid">
             </div>
         </div>
-        <div class="row justify-content-center align-items-center mb-3">
+        <div class="row justify-content-center align-items-start align-items-md-center mb-3">
             <div class="col-6 order-2">
                 <h1 class="display-4">For Doctors</h1>
                 <p>
