--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#">Login as Patient</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login as Doctor</a>
+                    <a class="nav-link" href="doctorspage.html">Login as Doctor</a>
                 </li>
                 
             </ul>
@@ -70,14 +70,14 @@
             <div class="col-6 order-2">
                 <h1 class="display-4">For Doctors</h1>
                 <p>
-                    Keep a track of your patient's medical history, dietary reccomendations and provide accutate diagnosis with the prevention of medication allergies.
+                    Keep a track of your patient's medical history, dietary reccomendations and provide accurate diagnosis with the prevention of medication allergies.
                     <ul class="d-none d-sm-inline">
                         <li class="ml-3">Keep a record of a large number of patients without physical pen-and-parer documentation</li>
                         <li class="ml-3">Provide accurate diagnosis based on previous visits</li>
                         <li class="ml-3">Have proper knowledge of the patients medical history</li>
                     </ul>
                     <div class="row">
-                        <a href="" class="btn btn-sm ml-3 mt-3 btn-outline-danger">Sign up as a Doctor</a>
+                        <a href="" class="btn btn-sm mx-3 mt-3 btn-outline-danger">Sign up as a Doctor</a>
                     
                     </div>
                 </p>
@@ -86,15 +86,14 @@
                 <img id="doctor" src="images/bill-oxford-8u_2imJaVQs-unsplash.jpg" alt="" class="img-fluid mx-auto d-block">
             </div>
         </div>
-        <hr>
     </section>
     <footer class="container-fluid">
         <div class="row justify-content-center">
-            <p><a target="_blank" href="https://github.com/HashTalmiz"><i class="mt-3 fab fa-github-square"></i></a>
+            <p><a target="_blank" href="https://github.com/HashTalmiz"><i class="mt-4 fab fa-github-square"></i></a>
             </p>
         </div>
-        <div class="row justify-content-center text-center">
-            <em>This Web App was made for the CODE-RIT MiniHack competition by Talmiz</em> 
+        <div class="row justify-content-center text-center px-1">
+            <em>This Website was made from scratch for the Code-RIT MiniHack competition</em>
         </div>
 
     </footer>
