--- a/doctorspage.html
+++ b/doctorspage.html
@@ -53,74 +53,74 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th scope="row"><a href="#">MS2018001</a></th>
+                            <th scope="row"><a href="prescription.html">MS2018001</a></th>
                             <td>Mark</td>
                             <td>Zucc</td>
                             <td><em>24 June 2019</em></td>
                         </tr>
                         <tr>
-                            <th scope="row"><a href="#">MS2018002</a></th>
+                            <th scope="row"><a href="prescription.html">MS2018002</a></th>
                             <td>Susan</td>
                             <td>Wosomethin</td>
                             <td><em>15 October 2019</em></td>
                         </tr>
                         <tr>
-                            <th scope="row"><a href="#">MS2018003</a></th>
+                            <th scope="row"><a href="prescription.html">MS2018003</a></th>
                             <td>Sundar</td>
                             <td>Pitcher</td>
                             <td><em>1 January 2019</em></td>
                         </tr>
                     <tr>
                     <tr>
-                        <th scope="row"><a href="#">MS2018001</a></th>
+                        <th scope="row"><a href="prescription.html">MS2018001</a></th>
                         <td>Mark</td>
                         <td>Zucc</td>
                         <td><em>24 June 2019</em></td>
                     </tr>
                     <tr>
-                        <th scope="row"><a href="#">MS2018002</a></th>
+                        <th scope="row"><a href="prescription.html">MS2018002</a></th>
                         <td>Susan</td>
                         <td>Wosomethin</td>
                         <td><em>15 October 2019</em></td>
                     </tr>
                     <tr>
-                        <th scope="row"><a href="#">MS2018003</a></th>
+                        <th scope="row"><a href="prescription.html">MS2018003</a></th>
                         <td>Sundar</td>
                         <td>Pitcher</td>
                         <td><em>1 January 2019</em></td>
                     </tr>
                     <tr><tr>
-                        <th scope="row"><a href="#">MS2018001</a></th>
+                        <th scope="row"><a href="prescription.html">MS2018001</a></th>
                         <td>Mark</td>
                         <td>Zucc</td>
                         <td><em>24 June 2019</em></td>
                     </tr>
                     <tr>
-                        <th scope="row"><a href="#">MS2018002</a></th>
+                        <th scope="row"><a href="prescription.html">MS2018002</a></th>
                         <td>Susan</td>
                         <td>Wosomethin</td>
                         <td><em>15 October 2019</em></td>
                     </tr>
                     <tr>
-                        <th scope="row"><a href="#">MS2018003</a></th>
+                        <th scope="row"><a href="prescription.html">MS2018003</a></th>
                         <td>Sundar</td>
                         <td>Pitcher</td>
                         <td><em>1 January 2019</em></td>
                     </tr>
                     <tr><tr>
-                        <th scope="row"><a href="#">MS2018001</a></th>
+                        <th scope="row"><a href="prescription.html">MS2018001</a></th>
                         <td>Mark</td>
                         <td>Zucc</td>
                         <td><em>24 June 2019</em></td>
                     </tr>
                     <tr>
-                        <th scope="row"><a href="#">MS2018002</a></th>
+                        <th scope="row"><a href="prescription.html">MS2018002</a></th>
                         <td>Susan</td>
                         <td>Wosomethin</td>
                         <td><em>15 October 2019</em></td>
                     </tr>
                     <tr>
-                        <th scope="row"><a href="#">MS2018003</a></th>
+                        <th scope="row"><a href="prescription.html">MS2018003</a></th>
                         <td>Sundar</td>
                         <td>Pitcher</td>
                         <td><em>1 January 2019</em></td>
@@ -154,12 +154,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
 
     <footer class="container-fluid">
         <div class="row justify-content-center">
